--- a/notebooks/eda_notebook.ipynb
+++ b/notebooks/eda_notebook.ipynb
@@ -15,11 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
     "import pandas as pd \n",
     "import numpy as np  \n",
     "import matplotlib.pyplot as plt  \n",
@@ -37,164 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the main supply chain dataset\n",
-    "supply_chain_data_df = pd.read_csv('../data/DataCoSupplyChainDataset.csv', encoding='latin1')\n",
-    "\n",
-    "# Load the description file\n",
-    "description_file_df = pd.read_csv('../data/DescriptionDataCoSupplyChain.csv', encoding='latin1')\n",
-    "\n",
-    "# Load the access logs\n",
-    "access_logs_df = pd.read_csv('../data/tokenized_access_logs.csv', encoding='latin1')"
+    "dataset = pd.read_csv('../data/DataCoSupplyChainDataset.csv', encoding=\"latin1\")\n",
+    "description = pd.read_csv('../data/DescriptionDataCoSupplyChain.csv', encoding=\"latin1\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Supply Chain Dataset Info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 180519 entries, 0 to 180518\n",
-      "Data columns (total 53 columns):\n",
-      " #   Column                         Non-Null Count   Dtype  \n",
-      "---  ------                         --------------   -----  \n",
-      " 0   Type                           180519 non-null  object \n",
-      " 1   Days for shipping (real)       180519 non-null  int64  \n",
-      " 2   Days for shipment (scheduled)  180519 non-null  int64  \n",
-      " 3   Benefit per order              180519 non-null  float64\n",
-      " 4   Sales per customer             180519 non-null  float64\n",
-      " 5   Delivery Status                180519 non-null  object \n",
-      " 6   Late_delivery_risk             180519 non-null  int64  \n",
-      " 7   Category Id                    180519 non-null  int64  \n",
-      " 8   Category Name                  180519 non-null  object \n",
-      " 9   Customer City                  180519 non-null  object \n",
-      " 10  Customer Country               180519 non-null  object \n",
-      " 11  Customer Email                 180519 non-null  object \n",
-      " 12  Customer Fname                 180519 non-null  object \n",
-      " 13  Customer Id                    180519 non-null  int64  \n",
-      " 14  Customer Lname                 180511 non-null  object \n",
-      " 15  Customer Password              180519 non-null  object \n",
-      " 16  Customer Segment               180519 non-null  object \n",
-      " 17  Customer State                 180519 non-null  object \n",
-      " 18  Customer Street                180519 non-null  object \n",
-      " 19  Customer Zipcode               180516 non-null  float64\n",
-      " 20  Department Id                  180519 non-null  int64  \n",
-      " 21  Department Name                180519 non-null  object \n",
-      " 22  Latitude                       180519 non-null  float64\n",
-      " 23  Longitude                      180519 non-null  float64\n",
-      " 24  Market                         180519 non-null  object \n",
-      " 25  Order City                     180519 non-null  object \n",
-      " 26  Order Country                  180519 non-null  object \n",
-      " 27  Order Customer Id              180519 non-null  int64  \n",
-      " 28  order date (DateOrders)        180519 non-null  object \n",
-      " 29  Order Id                       180519 non-null  int64  \n",
-      " 30  Order Item Cardprod Id         180519 non-null  int64  \n",
-      " 31  Order Item Discount            180519 non-null  float64\n",
-      " 32  Order Item Discount Rate       180519 non-null  float64\n",
-      " 33  Order Item Id                  180519 non-null  int64  \n",
-      " 34  Order Item Product Price       180519 non-null  float64\n",
-      " 35  Order Item Profit Ratio        180519 non-null  float64\n",
-      " 36  Order Item Quantity            180519 non-null  int64  \n",
-      " 37  Sales                          180519 non-null  float64\n",
-      " 38  Order Item Total               180519 non-null  float64\n",
-      " 39  Order Profit Per Order         180519 non-null  float64\n",
-      " 40  Order Region                   180519 non-null  object \n",
-      " 41  Order State                    180519 non-null  object \n",
-      " 42  Order Status                   180519 non-null  object \n",
-      " 43  Order Zipcode                  24840 non-null   float64\n",
-      " 44  Product Card Id                180519 non-null  int64  \n",
-      " 45  Product Category Id            180519 non-null  int64  \n",
-      " 46  Product Description            0 non-null       float64\n",
-      " 47  Product Image                  180519 non-null  object \n",
-      " 48  Product Name                   180519 non-null  object \n",
-      " 49  Product Price                  180519 non-null  float64\n",
-      " 50  Product Status                 180519 non-null  int64  \n",
-      " 51  shipping date (DateOrders)     180519 non-null  object \n",
-      " 52  Shipping Mode                  180519 non-null  object \n",
-      "dtypes: float64(15), int64(14), object(24)\n",
-      "memory usage: 73.0+ MB\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Supply Chain Dataset Info:\")\n",
-    "print(supply_chain_data_df.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Description Dataset Info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 52 entries, 0 to 51\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   FIELDS       52 non-null     object\n",
-      " 1   DESCRIPTION  52 non-null     object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 964.0+ bytes\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Description Dataset Info:\")\n",
-    "print(description_file_df.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Access Logs Dataset Info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 469977 entries, 0 to 469976\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column      Non-Null Count   Dtype \n",
-      "---  ------      --------------   ----- \n",
-      " 0   Product     469977 non-null  object\n",
-      " 1   Category    469977 non-null  object\n",
-      " 2   Date        469977 non-null  object\n",
-      " 3   Month       469977 non-null  object\n",
-      " 4   Hour        469977 non-null  int64 \n",
-      " 5   Department  469977 non-null  object\n",
-      " 6   ip          469977 non-null  object\n",
-      " 7   url         469977 non-null  object\n",
-      "dtypes: int64(1), object(7)\n",
-      "memory usage: 28.7+ MB\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Access Logs Dataset Info:\")\n",
-    "print(access_logs_df.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -567,18 +419,94 @@
        "4   PAYMENT                         2                              4         134.210007          298.250000  Advance shipping                   0           73  Sporting Goods        Caguas      Puerto Rico      XXXXXXXXX           Orli        19489      Hendricks         XXXXXXXXX        Corporate             PR  8671 Iron Anchor Corners             725.0              2         Fitness  18.253769  -66.037048  Pacific Asia  Townsville     Australia              19489         1/13/2018 11:24     75936                    1360            29.500000                      0.09         179251                    327.75                     0.45                    1  327.75        298.250000              134.210007         Oceania       Queensland  PENDING_PAYMENT            NaN             1360                   73                  NaN  http://images.acmesports.sports/Smart+watch   Smart watch          327.75               0            1/15/2018 11:24  Standard Class"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "supply_chain_data_df.head()"
+    "dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 180519 entries, 0 to 180518\n",
+      "Data columns (total 53 columns):\n",
+      " #   Column                         Non-Null Count   Dtype  \n",
+      "---  ------                         --------------   -----  \n",
+      " 0   Type                           180519 non-null  object \n",
+      " 1   Days for shipping (real)       180519 non-null  int64  \n",
+      " 2   Days for shipment (scheduled)  180519 non-null  int64  \n",
+      " 3   Benefit per order              180519 non-null  float64\n",
+      " 4   Sales per customer             180519 non-null  float64\n",
+      " 5   Delivery Status                180519 non-null  object \n",
+      " 6   Late_delivery_risk             180519 non-null  int64  \n",
+      " 7   Category Id                    180519 non-null  int64  \n",
+      " 8   Category Name                  180519 non-null  object \n",
+      " 9   Customer City                  180519 non-null  object \n",
+      " 10  Customer Country               180519 non-null  object \n",
+      " 11  Customer Email                 180519 non-null  object \n",
+      " 12  Customer Fname                 180519 non-null  object \n",
+      " 13  Customer Id                    180519 non-null  int64  \n",
+      " 14  Customer Lname                 180511 non-null  object \n",
+      " 15  Customer Password              180519 non-null  object \n",
+      " 16  Customer Segment               180519 non-null  object \n",
+      " 17  Customer State                 180519 non-null  object \n",
+      " 18  Customer Street                180519 non-null  object \n",
+      " 19  Customer Zipcode               180516 non-null  float64\n",
+      " 20  Department Id                  180519 non-null  int64  \n",
+      " 21  Department Name                180519 non-null  object \n",
+      " 22  Latitude                       180519 non-null  float64\n",
+      " 23  Longitude                      180519 non-null  float64\n",
+      " 24  Market                         180519 non-null  object \n",
+      " 25  Order City                     180519 non-null  object \n",
+      " 26  Order Country                  180519 non-null  object \n",
+      " 27  Order Customer Id              180519 non-null  int64  \n",
+      " 28  order date (DateOrders)        180519 non-null  object \n",
+      " 29  Order Id                       180519 non-null  int64  \n",
+      " 30  Order Item Cardprod Id         180519 non-null  int64  \n",
+      " 31  Order Item Discount            180519 non-null  float64\n",
+      " 32  Order Item Discount Rate       180519 non-null  float64\n",
+      " 33  Order Item Id                  180519 non-null  int64  \n",
+      " 34  Order Item Product Price       180519 non-null  float64\n",
+      " 35  Order Item Profit Ratio        180519 non-null  float64\n",
+      " 36  Order Item Quantity            180519 non-null  int64  \n",
+      " 37  Sales                          180519 non-null  float64\n",
+      " 38  Order Item Total               180519 non-null  float64\n",
+      " 39  Order Profit Per Order         180519 non-null  float64\n",
+      " 40  Order Region                   180519 non-null  object \n",
+      " 41  Order State                    180519 non-null  object \n",
+      " 42  Order Status                   180519 non-null  object \n",
+      " 43  Order Zipcode                  24840 non-null   float64\n",
+      " 44  Product Card Id                180519 non-null  int64  \n",
+      " 45  Product Category Id            180519 non-null  int64  \n",
+      " 46  Product Description            0 non-null       float64\n",
+      " 47  Product Image                  180519 non-null  object \n",
+      " 48  Product Name                   180519 non-null  object \n",
+      " 49  Product Price                  180519 non-null  float64\n",
+      " 50  Product Status                 180519 non-null  int64  \n",
+      " 51  shipping date (DateOrders)     180519 non-null  object \n",
+      " 52  Shipping Mode                  180519 non-null  object \n",
+      "dtypes: float64(15), int64(14), object(24)\n",
+      "memory usage: 73.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -927,46 +855,114 @@
        "51                  Shipping Mode  :  The following shipping modes are presented ..."
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "description_file_df"
+    "description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset rows: 180519\n",
-      "Dataset rows: 53\n"
+      "Dataset shape: (180519, 53)\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Dataset rows: {supply_chain_data_df.shape[0]}\")\n",
-    "print(f\"Dataset rows: {supply_chain_data_df.shape[1]}\")"
+    "print(f\"Dataset shape: {dataset.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Type',\n",
+       " 'Days for shipping (real)',\n",
+       " 'Days for shipment (scheduled)',\n",
+       " 'Benefit per order',\n",
+       " 'Sales per customer',\n",
+       " 'Delivery Status',\n",
+       " 'Late_delivery_risk',\n",
+       " 'Category Id',\n",
+       " 'Category Name',\n",
+       " 'Customer City',\n",
+       " 'Customer Country',\n",
+       " 'Customer Email',\n",
+       " 'Customer Fname',\n",
+       " 'Customer Id',\n",
+       " 'Customer Lname',\n",
+       " 'Customer Password',\n",
+       " 'Customer Segment',\n",
+       " 'Customer State',\n",
+       " 'Customer Street',\n",
+       " 'Customer Zipcode',\n",
+       " 'Department Id',\n",
+       " 'Department Name',\n",
+       " 'Latitude',\n",
+       " 'Longitude',\n",
+       " 'Market',\n",
+       " 'Order City',\n",
+       " 'Order Country',\n",
+       " 'Order Customer Id',\n",
+       " 'order date (DateOrders)',\n",
+       " 'Order Id',\n",
+       " 'Order Item Cardprod Id',\n",
+       " 'Order Item Discount',\n",
+       " 'Order Item Discount Rate',\n",
+       " 'Order Item Id',\n",
+       " 'Order Item Product Price',\n",
+       " 'Order Item Profit Ratio',\n",
+       " 'Order Item Quantity',\n",
+       " 'Sales',\n",
+       " 'Order Item Total',\n",
+       " 'Order Profit Per Order',\n",
+       " 'Order Region',\n",
+       " 'Order State',\n",
+       " 'Order Status',\n",
+       " 'Order Zipcode',\n",
+       " 'Product Card Id',\n",
+       " 'Product Category Id',\n",
+       " 'Product Description',\n",
+       " 'Product Image',\n",
+       " 'Product Name',\n",
+       " 'Product Price',\n",
+       " 'Product Status',\n",
+       " 'shipping date (DateOrders)',\n",
+       " 'Shipping Mode']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# list(supply_chain_data_df.columns)"
+    "# list(dataset.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +971,6 @@
     "                    'Days for shipment (scheduled)',\n",
     "                    'Benefit per order',\n",
     "                    'Sales per customer',\n",
-    "                    'Delivery Status',\n",
     "                    'Late_delivery_risk',\n",
     "                    'order date (DateOrders)',\n",
     "                    'Order Item Discount',\n",
@@ -989,6 +984,37 @@
     "                    'Product Price',\n",
     "                    'shipping date (DateOrders)',\n",
     "                    'Shipping Mode']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_columns(dataset, columns_to_drop):\n",
+    "    dataset = dataset.drop(columns=columns_to_drop)\n",
+    "    print(f\"{len(columns_to_drop)} columns dropped successfully. Number of columns remaining: {len(dataset.columns)}\")\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35 columns dropped successfully. Number of columns remaining: 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_to_drop = [col for col in dataset.columns if col not in modeling_columns]\n",
+    "\n",
+    "dataset = drop_columns(dataset, columns_to_drop)"
    ]
   },
   {
